--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,9 @@
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
-<hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<h1>The best movies according to Max</h1>
+<h2>My top 3 movies of all-time</h2>
+<hr>
+<h3>American beauty</h3>
+<p>This is my favorite movie. I like the representation of the American society in this film.</p>
+<h3>Warrior</h3>
+<p>Really emotional drama movie about two brothers reconnecting through a MMA competition.</p>
+<h3>Prisoners</h3>
+<p>Intense drama movie about the moral question how far one can go to reveal the truth.</p>
